[package]
name = "paga"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
byteorder = "1"
line_drawing = "1.0"
env_logger = "0.10"
error-iter = "0.4"
game-loop = { version = "0.10", features = ["winit"] }
log = "0.4"
pixels =  "0.13"
winit = "0.28"
winit_input_helper = "0.14"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
